# adk-tutorial

./: .gitignore  TODO.md  Taskfile.yml  Taskfile.yml.bak  inspect_agent.py  inspect_runner.py  inspect_runner_method.py  main.py  pyproject.toml  pyrefly.toml
openviking-go/: README.md  go.mod
openviking-go/cmd/ov/: main.go
openviking-go/cmd/server/: main.go
openviking-go/config/: ov.conf.example
openviking-go/internal/config/: config.go
openviking-go/~/.openviking-go/: ov.conf
src/: __init__.py
src/agents/: path_setup.py
src/agents/PTO_agent/: agent.py  runner.py
src/agents/adaptive_card_agent/: agent.py  debug_city_popup.py  models.py  runner.py  scenarios.md  scenarios.txt  sub_agents.py  verify_data_summary.py  verify_enforcement.py  verify_popup.py  verify_scenarios.py
src/agents/agui/: agent.py  runner.py
src/agents/math_agent/: agent.py  instructions.py  model.py  runner.py  tools.py
src/agents/welcome_agent/: agent.py
src/agents/welcome_agent/.adk/: session.db
src/agents/welcome_agent_advanced/: __init__.py  agent.ipynb  agent.py  path_setup.py  services.py  welcome_agent_advanced.db
src/agents/welcome_agent_advanced/.adk/: session.db
src/mcp_server/: adaptive_card_server.py
src/utils/: __init__.py  file_tools.py  ulid_tools.py
